public/css/custom.css
@font-face{
  font-family: Montserrat-Regular;
  src: url(../fonts/Montserrat-Regular.otf);
}

@font-face{
  font-family: NotoSerif-Regular;
  font-weight: normal;
  src: url(../fonts/NotoSerif-Regular.ttf);
}

@font-face{
  font-family: PlayfairDisplay-Regular;
  font-weight: normal;
  src: url(../fonts/PlayfairDisplay-Regular.ttf);
}

@font-face{
  font-family: PlayfairDisplay-Bold;
  font-weight: normal;
  src: url(../fonts/PlayfairDisplay-Bold.ttf);
}


@font-face{
  font-family: MartelSans-ExtraLight;
  font-weight: normal;
  src: url(../fonts/MartelSans-ExtraLight.ttf);
}

@font-face{
  font-family: OpenSans-Regular;
  font-weight: normal;
  src: url(../fonts/OpenSans-Regular.ttf);
}

@font-face{
  font-family: OpenSans-Bold;
  font-weight: normal;
  src: url(../fonts/OpenSans-Bold.ttf);
}

@font-face{
  font-family: OpenSans-Light;
  font-weight: normal;
  src: url(../fonts/OpenSans-Light.ttf);
}

@font-face{
  font-family: Raleway-Regular;
  src: url(../fonts/Raleway-Regular.ttf);
}

@font-face{
  font-family: Lustria-Regular;
  src: url(../fonts/Lustria-Regular.ttf);
}

.font-sansRegular{
  font-family: OpenSans-Regular;
  text-overflow: wrap;
}

.font-sansLight{
  font-family: OpenSans-Light;
  text-overflow: wrap;
}

.font-sansBold{
  font-family: OpenSans-Bold;
  text-overflow: wrap;
}

.font-martel{
  font-family: MartelSans-ExtraLight;
  text-overflow: wrap;
}


.font-playfair{
  font-family: PlayfairDisplay-Regular;
  text-overflow: wrap;

}

.font-playfair-bold{
  font-family: PlayfairDisplay-Bold;
  text-overflow: wrap;

}

.font-lustria{
  font-family: Lustria-Regular;
  text-overflow: wrap;
}
.font-noto{
  font-family: NotoSerif-Regular;
  text-overflow: wrap;
}

.font-montserrat{
  font-family: Montserrat-Regular;
  text-overflow: wrap;
}

.font-raleway{
  font-family: Raleway-Regular;
}

.font-halvetica{
  font-family: 'Helvetica Neue 25 UltraLight';
}
.txt-upper{
  text-transform: uppercase;
}
.txt-capital{
  text-transform: capitalize;
}
.txt_undeline{
  text-decoration: underline;
}

.txt-center{
  text-align: center;
}
.txt-justify{
  text-align: justify;
}
.fs-35px{
  
  font-size: 33px;
  
}

.fs-30px{
  
  font-size: 30px;
  
}
.fs-25px{
  
  font-size: 25px;
  
}

.fs-22px{
  
  font-size: 22px; 
}

.fs-20px{
  
  font-size: 20px; 
}

.fs-18px{
  
  font-size: 18px; 
}

.fs-16px{
  
  font-size: 16px; 
}

.fs-15px{
  
  font-size: 15px; 
}

.fs-14px{
  
  font-size: 14px; 
}

.fs-12px{
  
  font-size: 12px; 
}

.fs-11px{
  
  font-size: 11px; 
}

.fs-10px{
  
  font-size: 10px; 
}

.fs-8px{
  
  font-size: 8px; 
}

.col-lightgreen{
  color: #252525; /*rgb(37, 37, 37);*/
}

.col-silvergrey{
  /*color: #A1A1A1;*/ /*rgb(161, 161, 161);*/
  
  color: #DDDCDC;
}

.col-darkgrey{
  color: #707070;
}

.col-inspiring{
  color:#64c6be;
}

.col-hpgreen{
  color:;
  /*color:#00a99d;*/
}

.col-cyan{
  color: #2fb9af; /*rgb(47, 185, 175)*/;
}

.col-lightcyan{
   color: #64C6BE;/*rgb(100, 198, 190);*/
}

.divider {
    text-align: center;
    white-space: nowrap;
    padding: 20px 0 60px;
    clear:both;
}

.divider > span {
    position: relative;
    display: inline-block;
    width: 300px;
    padding: 10px;
    border:2px solid rgb(47, 185, 175);
    text-transform: uppercase;
    font-family: Montserrat-Regular;
    color:rgb(47, 185, 175);
    font-size: 20px;
    clear:both;
}

.divider > span:before,
.divider > span:after {
    content: "";
    position: absolute;
    top: 50%;
    width: 9999px;
    height: 2px;
    background: rgb(47, 185, 175);
}

/*footer .divider > span:before,  footer .divider > span:after {
    top: 14px;
    height: 20px;
    opacity: 0.5;
}*/

.divider > span:before {
    right: 100%;
    margin-right: 0px;
    
}

.divider > span:after {
    left: 100%;
    margin-left: 0px;

}





body{
  background: #ffffff;
  color: #000;
  max-width: 1920px;
  width: 100%;
  font-family: 'Montserrat-Regular', sans-serif;
  word-wrap: break-word;
}

/* Header starts */

#site_header{
  width: 100%;
  height: 135px;
  padding: 8px 0;
  position: relative;
}



#hp-nav{
  margin: 0 30px;
  padding: 30px 0;
  position: absolute;
  right: 0;
}
#hp-nav ul {
  list-style:none;
  text-align:left;
  margin: 0;
  padding: 0;
  z-index: 2;
  display: inline-block;

}
 
.topnav li{
  width: auto;
  display: -moz-inline-stack;
  display:inline-block;
  padding-top: 15px;
  padding-bottom:2px;
  padding-left: 2px;
  padding-right: 2px;
  margin: 0 18px;
}

.topnav li:hover{
  border-bottom: 2px solid #64C6BE;
}

.topnav .menu-list:nth-child(1):hover, .topnav li:nth-child(6):hover{
  border-bottom: 0;
}
.topnav li ul li:hover{
  border-bottom: 2px solid #64C6BE;
}

.tab_icon{
    display: none;
}

.topnav li a {
    font-family:Montserrat-Regular;
    text-transform: uppercase;
    font-size: 12px;
    letter-spacing: 1px;
    color: #000;
    text-decoration: none;
    padding-top: 10px;
    padding-bottom: 10px;
    text-align: left;
}

 .topnav li:hover >ul >li
{
  display:block;
}

.topnav li ul
{
  display:block;
  position:absolute;
  top:70%;
  /*height:100px;*/
  left:20px;
  width:180px;
  background:#fff; 
  text-align: left;
}



.topnav li ul li{
  display: none;
  border-bottom: 0.5px solid black;

}

.topnav li ul li:nth-child(2){
   margin-bottom:25px;
}

.submenu-list li a{
  font-size:12px;

}

#exp-subtext{
  padding-top:13px;letter-spacing:1px;
}

@media screen and (max-width: 1280px) {
    .topnav li {
        margin: 0 10px;
    }

    #site_logo {
        padding: 0 40px;
    }

    #hp-nav {
        margin: 0 20px;
    }
}

@media screen and (max-width: 1080px) {
    .topnav li {
        margin: 0 7px;
    }

    #site_logo {
        padding: 0 26px;
    }

    #hp-nav {
        margin: 0 12px;
    }
}

/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens */
@media screen and (max-width:980px) {
    .topnav {
        margin-right: 50px;
    }

    .topnav li:not(:last-child) {
        display: none;
    }

    .tab_icon,.tab-icon-quiz {
        margin: 0 18px;
        display: inline-block;
        position: absolute;
        top: 16px;
        right: 0;
        font-size: 20px;
    }

    .tab_icon a , .tab-icon-quiz a{
        color: #64C6BE;
    }

    .tab_icon a:hover, .tab_icon a:active, .tab_icon a:visited,
    .tab-icon-quiz a:hover, .tab-icon-quiz a:active, .tab-icon-quiz a:visited {
        color: #64C6BE;
        text-decoration: none;
    }

    .tab-icon-quiz ul li:hover >ul >li
    {
      display:block;
    }

    .tab-icon-quiz ul li ul{
      display: none;
    }
    #hp-nav ul.responsive {
        position: relative;
        background-color: #fff;
        padding: 2px 20px;
        border: 1px solid #64C6BE;
    }

    #hp-nav ul.responsive li {
        float: none;
        display: list-item;
        margin: 10px 0;
    }

    #hp-nav ul.responsive li a {
        display: block;
        text-align: left;
    }
}

/* Header ends */

/* Homepage Main Section*/ 

#hero{
  height:650px;
  background-image:url('/images/banner.png');
  background-size: cover;
  background-position: 0 -20px;
  position: relative;
  background-repeat:no-repeat;
}

.hero-rect{
  position: relative;
  top: 140px;
  margin: 0 auto;
  background-color: #fff;
  opacity: 0.95;
  height: 320px;
  text-align: center;
  width: 50%;
  min-width: 540px;
}

.container-ctr-txt{
  margin: 0 auto;
  padding-top: 80px;
  max-width: 510px;
  min-width: 450px;
}

.btn-container{
    position: absolute;
    top: 430px;
    left: calc(50% - 120px);
    margin: 0 auto;
}


.btn-start-quiz{
    color: #fff;
    background-color: #64C6BE; /*rgb(100, 198, 190)*/;
    border-color: transparent;
    text-decoration: none;
}
.btn-topnav{
padding-top:6px; padding-bottom:6px;letter-spacing:1px;
}
.btn-hero{
  padding-top: 15px;
  padding-bottom: 15px;
  padding-left: 40px;
  padding-right: 40px;
  border-left: 2px solid rgb(38, 165, 156);
  border-bottom: 2px solid rgb(38, 165, 156);
  letter-spacing: 1px;
}

/* Homepage Main Section ends*/ 

/* HP experience starts*/
#hp_experience{

  margin: 30px 40px;

  text-align: center;
}

.step_wrapper {
  padding-bottom: 100px;

  padding:20px;
}

.hp_workflow {
  height: 320px;
  width:300px;
  display: inline-block;
  margin: 40px 10px;
  text-align: center;
  vertical-align: top;
}

.hp_workflow_content {
    height: 300px;
    text-align: center;
    position: relative;
    border:2px solid rgb(100, 198, 190);
}

.step_icon{
  position: relative;
  width: 110px;
  height: 110px;
  top: -20px;
  margin:0 auto;
  text-align: center;
  border:2px solid rgb(100, 198, 190);
}

.step-title{
  width:200px;
  margin:0 auto;
  text-align: center;
  font-size: 12px;
  color: rgb(85, 85, 85);
  text-transform: uppercase;
}

.step-text{
  font-size: 12px;
  /*font-family: "Raleway-Regular";*/
  color: rgb(70, 70, 70);
  width: 240px;
  margin: 0 28px;
  text-align: justify;
  top: 160px;
  position: absolute;
}


.mask {
  position: relative;
  top: -2px;
  left: 93px;
  width: 110px;
  height: 2px;
  background-color:#fff;
}

.img-steps{
    width: auto;
    height: auto;
    position: absolute;  
    top: 0;  
    bottom: 0;  
    left: 0;  
    right: 0;  
    margin: auto;
}

@media screen and (max-width: 400px) {
   #step1,#step2, #step3, #step4 { 
    float: none;
    margin-right:0;
    padding:40px;
    width:auto;
    border:2px;
  }

}

@media screen and (max-width:500px) {
    #exp-maintext {
      font-size:20px;
    }
    #exp-subtext{
      font-size: 10px;
    }
}
/* HP experience ends*/


/* Gallery CSS start*/
#recent-designs {
  margin: 60px 40px;
  text-align: center;
}

.gallery{
  text-align: center;
  padding-top: 50px;
}

.design{
  display: inline-block;
  position: relative;
  width: 32%;
  margin: 3px;
  padding-bottom:2px;
}


#view-gallery{
  
  color:rgb(170,170,170);
  padding-left:3px;
  padding-right:5px;
  padding-bottom:1px;
  border-bottom:1px solid;
}

.text, .text-border{
  font-family:"PlayfairDisplay-Regular";
  background-color: #fff;
  position: absolute;
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 12px;
  margin-bottom: 12px;
  color: #777;
  /*height: 450px;*/
  text-align: center;
  padding-top:31px;
  width: calc(100% - 26px);
  height: calc(100% - 25px);
  opacity: 0;
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
  text-decoration: none;
}

.text1{
  background-color: #fff;
  position: absolute;
  margin: 20px;
  color: #777;
  height: 200px;
  text-align: center;
  width: calc(100% - 40px);
  height: calc(100% - 40px);
  opacity: 0;
  -webkit-transition: all 0.5s ease;
  -moz-transition: all 0.5s ease;
  -o-transition: all 0.5s ease;
  transition: all 0.5s ease;
  text-decoration: underline;
}

.text-border {
    background-color: transparent;
    border: 1px solid #fff;
    opacity: 0.9;
}

.text:hover{
  opacity: 0.9;
}

.text div {
    margin-top: calc(50% - 60px);
}

/* Gallery CSS ends*/

/* Footer starts*/
.footer-list-header{
  background-color: rgb(235, 235, 235);
  font-size: 12px;
  margin-bottom: 10px;

  padding-left:10px;
  padding-right: 35px;
  padding-top:4px;
  padding-bottom:4px;
}

.footer-list{
padding-left:10px;
}

#site_footer{
  clear: both; /* to clear any float settings */
  width: 100%;
  height: 100px;
  
}

.hp-logo{
  padding: 0 20px;
    float: left;
}

.hp-logo img {
    height: 120px;
}

#footer-data{
  width:80%;text-align:left;display:inline-block;padding-left:100px;
}

#footer-data ul{
  list-style:none;display:table-cell;padding-right:100px;
}

#footer_data li a:hover{
  color: #707070;
  text-decoration: underline;
}

/* Footer ends*/

